[package]
name = "tss-wasm"
version = "0.0.1"
edition = "2021"

authors = ["Omer <omer@kzencorp.com>", "Eigen Labs <stephen@ieigen.com>"]
description = "WASM/HW-friendly lightweight client application for threshold ECDSA"
homepage = "https://github.com/0xEigenLabs"
repository = "https://github.com/0xEigenLabs/tss-wasm"
license = "GPL-3.0-or-later"


[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.1"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dependencies]
#serde = "1.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

num-bigint = { version = "0.2.2", features = ["serde", "rand"] }
num-integer = "0.1"
num-traits = "0.2.6"

bit-vec = "0.5"
cryptoxide = "0.1.1"
zeroize = "1.0"

libsecp256k1 = "0.3.2"
reqwest = { version = "0.11.11", features = ["json"] }
aes-gcm = "0.9.4"
sha2 = "0.9"
hex = "0.4"
lazy_static = "1.4"
hmac = "0.11"
digest = "0.9"
typenum = "1.13"
generic-array = "0.14"
js-sys = "0.3.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.2"

[[bench]]
name = "keygen"
path = "tests/keygen.rs"
harness = false

[[bench]]
name = "sign"
path = "tests/sign.rs"
harness = false

[features]
default = []
bench = []
